<resources>
    <!-- preferences text -->
    <string name="app_name">Phone to web forwarder</string>
    <string name="connection_header">Connection settings</string>
    <string name="token_title">Access token</string>
    <string name="endpoint_title">API endpoint address</string>
    <string name="filter_header">Filter settings</string>
    <string name="filter_toggle">Filtering</string>
    <string name="filter_type">Filter type</string>
    <string name="filter_list">Filter list</string>
    <string name="filter_list_entry_number">Entries: </string>
    <string name="forward_header">Forwarding settings</string>
    <string name="sms_forward_toggle">SMS</string>
    <string name="sms_template">SMS notification template</string>
    <string name="call_forward_toggle">Missed calls</string>
    <string name="call_template">Missed call notification template</string>
    <string name="about_header">About</string>
    <string name="app_desc">by bnfour, September 2018</string>
    <string name="oss_title">Open-source! (MIT)</string>
    <string name="oss_desc">Code lives at GitHub</string>
    <string name="connection_not_set">Not set! Notifications unavailable</string>
    <string name="connection_set_okay">Set. Tap to view/edit</string>
    <string name="bad_token">Not a valid token. Please re-check</string>
    <string name="bad_endpoint">Not a valid endpoint address. Please re-check</string>
    <string name="sms_template_hint">%s for sender, %t for message text</string>
    <string name="calls_template_hint">%c for caller ID</string>
    <string name="sms_template_default">%s:\n%t</string>
    <string name="calls_template_default">Missed call from %c</string>
    <string name="token_regex">[0-9a-zA-Z+=]{16}</string>
    <string name="endpoint_hint">URL as given by bot via /token command, but without the last \"api\" part for technical reasons. Should end with slash though.</string>
    <string name="endpoint_hint_short">URL without trailing \"api\"</string>
    <string name="token_hint_short">Exactly 16 characters long</string>
    <string name="bad_connection_toast">Your connection settings are invalid. App won\'t work until you fix them.</string>
    <string name="bad_connection_notification">Bad connection settings! Notification was lost.</string>
    <string name="retries_failed">Bandwidth exceeded! Notification was lost.</string>
    <string name="no_token_fail">API reports no such token exists! Notification was lost.</string>
    <string name="another_failure">Notification was not delivered! Check your Internet connection and endpoint URL.</string>
    <string name="icon_title">App icon by Icojam</string>
    <string name="icon_desc">From public domain Blue Bits pack</string>
    <string name="third_party_title">Third-party licenses</string>
    <string name="third_party_long">This project utilises the following libraries:\n\n
- Retrofit by Square, Inc.\n
- GSON by Google Inc.\n
- Android Support Library by The Android Open Source Project.\n\n
All available under Apache 2.0 license:\n\n
Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n
\n
    http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.
    </string>
    <!-- additional filter text, copied from sms forwarder -->
    <string-array name="filter_types">
        <item>Blacklist</item>
        <item>Whitelist</item>
    </string-array>
    <string-array name="filter_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="filter_type_summary_black">Blacklist</string>
    <string name="filter_type_summary_white">Whitelist</string>
    <!-- filter list editor strings, also copied -->
    <string name="add_to_list">Add sender</string>
    <string name="remove_from_list">Delete</string>
    <string name="format_hint">Please use international format for phone numbers whenever possible.</string>
    <string name="clear_all">Clear list</string>

    <string name="edit_entry">Edit entry</string>
    <string name="new_entry">New entry</string>

    <string name="confirm_title">Please confirm deletion</string>
    <string name="confirm_text">Are you sure you want to remove all entries from this list? This cannot be undone.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
